--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Tugas pwd-8</h1>
     <h2>deadline tgl-20</h2>
     <p>banyak sekali tugas</p>
+    <p>Dah mah malah ke Bali</p>
 </body>
 </html>
