menambahkan gambar di html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>deadline tgl-20</h2>
     <p>banyak sekali tugas</p>
     <p>Dah mah malah ke Bali</p>
+    <img src="posyandu.png" alt="">
 </body>
 </html>
